Removed modal styles from tethys_gizmos.css to address issue #127. Added some of the styles to app_base.css to adjust vertical alignment of the modal. Also added documentation on the after_app_content block.

--- a/tethys_apps/static/tethys_apps/less/app_base.less
+++ b/tethys_apps/static/tethys_apps/less/app_base.less
@@ -291,6 +291,11 @@ body {
   padding: 20px @app-content-padding 10px @app-content-padding;
 }
 
+// Styles for modal adjustments
+.modal-dialog {
+  top: 150px;
+}
+
 @media (max-width: 1900px) {
   #app-header {
     .tethys-app-header {
